syntax = "proto3";

package user_domain;
option go_package = "github.com/wuyazi/grpc_user_domain/user_domain";

message createReq {
    string nickname = 1;
}

message updateNicknameReq {
    int64 userId = 1;
    string nickname = 2;
}

message updateAgeReq {
    int64 userId = 1;
    int64 age = 2;
}

message updateGenderReq {
    int64 userId = 1;
    string gender = 2;
}

// service
message userIdResp {
    int64 userId = 1;
}

service userCommend{
    rpc create(createReq) returns(userIdResp);
    rpc updateNickname(updateNicknameReq) returns(userIdResp);
    rpc updateAge(updateAgeReq) returns(userIdResp);
    rpc updateGender(updateGenderReq) returns(userIdResp);
}

